@@ -160,10 +160,10 @@ Prepares a source package to use gettext.
 Options:
       --help           print this help and exit
       --version        print version information and exit
-  -c, --copy           copy files instead of making symlinks
   -f, --force          force writing of new files even if old exist
       --intl           install libintl in a subdirectory
       --no-changelog   don't update or create ChangeLog files
+      --symlink        make symbolic links instead of copying files
   -n, --dry-run        print modifications but don't perform them
 
 Report bugs to <bug-gnu-gettext@gnu.org>."
@@ -196,21 +196,20 @@ func_fatal_error ()
 # Removes the OPTIONS from the arguments. Sets the variables:
 # - force           1 if --force was given, 0 otherwise
 # - intldir         yes if --intl was given, empty otherwise
-# - try_ln_s        false if --copy was given, : otherwise
+# - try_ln_s        : if --symlink was given, false otherwise
 # - do_changelog    false if --no-changelog was given, : otherwise
 # - doit            false if --dry-run was given, : otherwise
 {
   force=0
   intldir=
-  try_ln_s=:
+  try_ln_s=false
   do_changelog=:
   doit=:
 
   while test $# -gt 0; do
     case "$1" in
-      -c | --copy | --cop | --co | --c )
-        shift
-        try_ln_s=false ;;
+      -c | --copy | --cop | --co | --c ) # accepted for backward compatibility
+        shift ;;
       -n | --dry-run | --dry-ru | --dry-r | --dry- | --dry | --dr | --d )
         shift
         doit=false ;;
@@ -225,6 +224,9 @@ func_fatal_error ()
       --no-changelog | --no-changelo | --no-changel | --no-change | --no-chang | --no-chan | --no-cha | --no-ch | --no-c )
         shift
         do_changelog=false ;;
+      --symlink | --symlin | --symli | --syml | --sym | --sy | --s )
+        shift ;;
+        try_ln_s=: ;;
       --version | --versio | --versi | --vers | --ver | --ve | --v )
         func_version
         exit 0 ;;
