@@ -1,3 +1,8 @@
+2006-10-08  Bruno Haible  <bruno@clisp.org>
+
+	* gettextize.texi: Document the --symlink option instead of the --copy
+	option.
+
 2006-10-05  Bruno Haible  <bruno@clisp.org>
 
 	* ISO_639: Add Adangme. Fix the names of Western Frisian, Galician,
