@@ -1,3 +1,10 @@
+2006-10-08  Bruno Haible  <bruno@clisp.org>
+
+	* gettextize.in (usage): Document the --symlink option instead of the
+	--copy option.
+	Accept a --symlink option.
+	(try_ln_s): Change default value to false.
+
 2006-10-01  Bruno Haible  <bruno@clisp.org>
 
 	* gettextize.in (m4filelist): Add intldir.m4.
