@@ -29,6 +29,10 @@ Version 0.15.1 - October 2006
   files that are needed: gettext.m4, iconv.m4, lib-ld.m4, lib-link.m4,
   lib-prefix.m4, nls.m4, po.m4, progtest.m4.
 
+* gettextize no longer creates symbolic links by default; it makes file copies
+  instead.  The option --copy is removed.  You can get back the flawed
+  symlinking behaviour by specifying the --symlink option.
+
 * Autoconf macros:
   - The gettext autoconf macros now require autoconf 2.52 or newer.
   - A new autoconf macro AM_GNU_GETTEXT_INTL_SUBDIR is added. It allows to
